possible fix to overflow

--- a/website/website.css
+++ b/website/website.css
@@ -390,8 +390,9 @@ ol {
     margin: 10% auto;
     padding: 20px;
     border: 1px solid #888;
-    max-width: 50%;
+    max-width: 40%;
     min-width: 20%;
+    min-height: 40%;
     border-radius: 6px;
     box-shadow: rgba(0, 0, 0, 0.3) 3px 3px 10px;
     display: flex;
@@ -400,7 +401,6 @@ ol {
     justify-content: center;
     align-items: center;
     text-align: center;
-    /*top: -20%;       testi */
 }
 
 
@@ -410,7 +410,7 @@ ol {
 }
 
 .popup-content img {
-    max-width: 80%;
+    max-width: 50%;
     max-height: 30rem;
     height: auto;
     border-radius: 6px;
@@ -473,7 +473,7 @@ ol {
 }
 
 .marker-darkgreen {
-    background-color: rgba(103, 59, 16, 0.96);(103, 59, 16);
+    background-color: rgba(103, 59, 16, 0.96);
     filter: hue-rotate(90deg);
     backdrop-filter: hue-rotate(90deg);
     border-radius: 50%;
